<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/captureInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:hint="@string/capture_name"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            tools:ignore="NestedWeights">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/captureText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/setCaptureNameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="0"
            android:text="@string/set">

        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_currentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_name" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addMacInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:hint="@string/mac"
            app:counterEnabled="true"
            app:counterMaxLength="17"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            tools:ignore="NestedWeights">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addMacText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addMacButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="0"
            android:text="@string/add">

        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/startCaptureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_capture" />

    <TextView
        android:id="@+id/tv_macList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mac_list" />

    <ListView
        android:id="@+id/macListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>